--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -49,6 +49,9 @@ jobs:
                         suffix=${{ matrix.os.suffix }}
                 id: metadata
 
+            -   name: Set up QEMU
+                uses: docker/setup-qemu-action@v3
+
             -   name: Set up Buildx
                 uses: docker/setup-buildx-action@v3
 
@@ -59,5 +62,6 @@ jobs:
                     context: .
                     file: ${{ matrix.os.dockerfile }}.Dockerfile
                     push: true
+                    platforms: linux/amd64,linux/arm64
                     labels: ${{ steps.metadata.outputs.labels }}
                     tags: ${{ steps.metadata.outputs.tags }}
