--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -65,3 +65,35 @@ jobs:
                     platforms: linux/amd64,linux/arm64
                     labels: ${{ steps.metadata.outputs.labels }}
                     tags: ${{ steps.metadata.outputs.tags }}
+
+    build-runner:
+        needs: build
+        runs-on: ubuntu-latest
+        permissions:
+            packages: write
+            contents: read
+
+        steps:
+            -   name: Checkout repository
+                uses: actions/checkout@v4
+
+            -   name: Log in to Docker Hub
+                uses: docker/login-action@master
+                with:
+                    username: ${{ vars.DOCKERHUB_USERNAME }}
+                    password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+            -   name: Set up QEMU
+                uses: docker/setup-qemu-action@v3
+
+            -   name: Set up Buildx
+                uses: docker/setup-buildx-action@v3
+
+            -   name: Build and push Runner image
+                uses: docker/build-push-action@v6
+                with:
+                    context: .
+                    file: Runner.Dockerfile
+                    push: true
+                    platforms: linux/amd64,linux/arm64
+                    tags: tayloraswift/swiftwasm:runner
